--- a/KoseaProject/src/main/webapp/resources/css/header.css
+++ b/KoseaProject/src/main/webapp/resources/css/header.css
@@ -8,3 +8,10 @@
 	color: rgb(0, 0, 0);
 	padding-right: 10%;
 }
+
+
+/* ドロップダウンをマウスホバーで表示 */
+.nav-item.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0; /* 滑らかに表示 */
+}
