--- a/KoseaProject/src/main/webapp/resources/css/header.css
+++ b/KoseaProject/src/main/webapp/resources/css/header.css
@@ -1,13 +1,19 @@
-.main {
-	font-size: 20px;
-	text-decoration: none;
-	color: rgb(0, 0, 0);
-	padding-right: 10%;
+/* header.css */
+.header-main {
+    font-size: 20px;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    padding-right: 10%;
 }
-
 
 /* ドロップダウンをマウスホバーで表示 */
 .nav-item.dropdown:hover .dropdown-menu {
     display: block;
     margin-top: 0; /* 滑らかに表示 */
+}
+
+/* ヘッダー全体のz-index調整 */
+header {
+    z-index: 1010; /* フッターや他の要素より手前に表示 */
+    position: relative;
 }
