--- a/KoseaProject/src/main/webapp/resources/css/index.css
+++ b/KoseaProject/src/main/webapp/resources/css/index.css
@@ -1,8 +1,7 @@
-/* メインコンテンツ */
-
+/* index.css */
 body {
     background-color: #5fb1a3; 
-    color: #fff; 
+    color: #000; 
     font-family: 'Arial', sans-serif; 
 }
 
@@ -10,21 +9,21 @@ body {
     margin-top: 20px;
 }
 
-main {
+.index-main {
     padding: 20px 0;
 }
 
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
-	color: #fff;
+    color: #ffffff;
     margin-bottom: 15px;
 }
 
 h2 {
     font-size: 2rem;
     font-weight: 600;
-	color: #fff;
+    color: #ffffff;
     margin-top: 30px;
     margin-bottom: 20px;
 }
